practice testCode with lombok

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencies {
 
     implementation("org.mariadb.jdbc:mariadb-java-client")
 
+    implementation('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation("org.springframework.security:spring-security-test")
 }
